--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
       rel="icon"
       type="image/svg+xml"
       href="/markdown.svg" />
+    <script
+      src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"
+      defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/marked/7.0.2/marked.min.js"
+      defer></script>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
